--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular": "^1.6.9",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "method-override": "^2.3.10",
     "mongoose": "^5.0.10",
     "morgan": "~1.9.0",
     "request": "^2.85.0",
